src/documents/css/contrast.css.styl
build-themes-extensions(contrastThemes) {
    for themeName in contrastThemes {
        fColor = contrastThemes[themeName].foregroundColor;
        bColor = contrastThemes[themeName].backgroundColor;

        {themeName} {
          .fluid-web .fluid-web-emphasized-text {
            color: fColor !important;
          }
          .fluid-web .fluid-web-community .fluid-web-community-list li .fluid-web-community-icon:before {
            background-color: bColor !important;
            box-shadow: none;
          }
        }
    }
}

myThemes = {
    ".fl-theme-bw": {
        foregroundColor: #000000,
        backgroundColor: #ffffff
    }
    ".fl-theme-wb": {
        foregroundColor: #ffffff,
        backgroundColor: #000000
    }
    ".fl-theme-yb": {
        foregroundColor: #ffff00,
        backgroundColor: #000000
    }
    ".fl-theme-by": {
        foregroundColor: #000000,
        backgroundColor: #ffff00
    }
    ".fl-theme-lgdg": {
        foregroundColor: #bdbdbb,
        backgroundColor: #555555
    }
}
build-themes-extensions(myThemes);

